--- a/assets/style.css
+++ b/assets/style.css
@@ -20,4 +20,16 @@
 .card-green{
     font-size: x-small;
 }
-
+.card:hover, .card-green:hover{
+    box-shadow: 0 0 0 1px blue;
+    color: palevioletred;
+}
+.card:hover{
+    background-color: #006cfa75;
+}
+.card-green:hover{
+    background-color: #00e16575;
+}
+h1:hover{
+    color: red;
+}
