put bg class from framework.css to style.css

--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,13 @@
     width: 100%;
     height: 25px;
 }
+
+.bg-blu{
+    background-color: #006cfa;
+}
+.bg-green{
+    background-color: #00e165;
+}
 .row-short{
     display: flex;
     width: 95%;
